WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218206
[Mac] Audio and Video element creation up to 300x slower than other browsers
https://bugs.webkit.org/show_bug.cgi?id=218206
Summary
[Mac] Audio and Video element creation up to 300x slower than other browsers
Jer Noble
Reported
2020-10-26 14:07:52 PDT
[Mac] Audio and Video element creation up to 300x slower than other browsers
Attachments
Patch
(15.99 KB, patch)
2020-10-26 14:17 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(15.99 KB, patch)
2020-10-27 10:03 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-10-26 14:08:26 PDT
<
rdar://problem/62451019
>
Jer Noble
Comment 2
2020-10-26 14:17:18 PDT
Created
attachment 412353
[details]
Patch
Eric Carlson
Comment 3
2020-10-26 14:30:34 PDT
Comment on
attachment 412353
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=412353&action=review
> Source/WebCore/platform/audio/mac/AudioSessionMac.mm:104 > + bool hasSampleRateObserver { false }; > + Optional<double> sampleRate; > + bool hasBufferSizeObserver { false }; > + Optional<size_t> bufferSize;
Nit: the object would be slightly smaller if the `Optional<size_t>` were declared above the bools
Peng Liu
Comment 4
2020-10-26 14:38:51 PDT
Comment on
attachment 412353
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=412353&action=review
> Source/WebCore/platform/audio/mac/AudioSessionMac.mm:128 > + if (result)
Nit. Probably "if (result != noErr)" is better?
> Source/WebCore/platform/audio/mac/AudioSessionMac.mm:409 > + if (!result)
Nit. Probably "if (result == noErr)" is better?
Jer Noble
Comment 5
2020-10-27 10:03:16 PDT
Created
attachment 412437
[details]
Patch for landing
EWS
Comment 6
2020-10-27 15:21:33 PDT
Committed
r269077
: <
https://trac.webkit.org/changeset/269077
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412437
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug